# aleph-ardupilot

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  flake.nix
examples/ardupilot-hitl/: config.py
nix/modules/: arducopter.nix  ardupilot-bridge.nix  can.nix
nix/pkgs/: arducopter.nix  ardupilot-bridge.nix  fake-git.nix
sim/ardupilot-hitl/: main.py  sim.py
sim/sim-hitl/: config.py  filter.py  gps.py  main.py  motor_thrust_curve.csv  sensors.py  sim.py
src/: ardupilot-defaults.param
src/ardupilot-bridge/: Cargo.toml
src/ardupilot-bridge/src/: ardupilot_ipc.rs  can_output.rs  config.rs  coordinate.rs  elodin.rs  hitl.rs  imu_filter.rs  main.rs
src/ardupilot-custom/: AP_ExternalAHRS_Aleph.cpp  AP_ExternalAHRS_Aleph.h
