[package]
name = "ardupilot-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
zerocopy = { version = "0.8", features = ["derive"] }
byteorder = "1"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Elodin ecosystem (pinned to upstream aleph commit)
impeller2 = { git = "https://github.com/elodin-sys/elodin.git", rev = "80f226daf08f9fb9819adbe2e711e8eec2f83543", features = ["std"] }
impeller2-stellar = { git = "https://github.com/elodin-sys/elodin.git", rev = "80f226daf08f9fb9819adbe2e711e8eec2f83543" }
impeller2-wkt = { git = "https://github.com/elodin-sys/elodin.git", rev = "80f226daf08f9fb9819adbe2e711e8eec2f83543", features = ["std"] }
stellarator = { git = "https://github.com/elodin-sys/elodin.git", rev = "80f226daf08f9fb9819adbe2e711e8eec2f83543", features = ["miette"] }
db-macros = { git = "https://github.com/elodin-sys/elodin.git", rev = "80f226daf08f9fb9819adbe2e711e8eec2f83543" }
fastrand = "2"
futures-lite = "2"
